Shuffle things around, add volume control

--- a/servergui.lpi
+++ b/servergui.lpi
@@ -35,7 +35,7 @@
         <PackageName Value="LCL"/>
       </Item2>
     </RequiredPackages>
-    <Units Count="3">
+    <Units Count="4">
       <Unit0>
         <Filename Value="servergui.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -52,6 +52,10 @@
         <IsPartOfProject Value="True"/>
         <UnitName Value="consoleCheckerThread"/>
       </Unit2>
+      <Unit3>
+        <Filename Value="mqttmanagerthread.pas"/>
+        <IsPartOfProject Value="True"/>
+      </Unit3>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
