--- a/servergui.lpi
+++ b/servergui.lpi
@@ -60,6 +60,7 @@
         <Filename Value="confirmation.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="frmConfirm"/>
+        <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
       </Unit4>
     </Units>
